# Assignment

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tech_task/: hooks.py  modules.txt  patches.txt
tech_task/fixtures/: role.json  server_script.json  workflow_action_master.json  workflow_state.json
tech_task/patches/: assign_roles_to_admin.py  maintenance_workflow.py
tech_task/technincal_task_assignment/: dashboard.py
tech_task/technincal_task_assignment/custom/: task.json
tech_task/technincal_task_assignment/doctype/asset_maintenance_request/: asset_maintenance_request.js  asset_maintenance_request.json  asset_maintenance_request.py  test_asset_maintenance_request.py
tech_task/technincal_task_assignment/page/maintenance_dashboar/: maintenance_dashboar.js  maintenance_dashboar.json
